<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:hint="@string/hint_name_editText"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <TextView
            android:id="@+id/toppings_text_view"
            style="@style/HeaderTextStye"
            android:text="@string/toppings_textView" />

        <CheckBox
            android:id="@+id/chocolate_checbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/chocolate_checkBox"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/whipped_cream_checbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/whipped_cream_checBox"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/HeaderTextStye"
            android:text="@string/quantity_textView1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrement_button" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/quantity_textView2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increment_button" />


        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order_button" />
    </LinearLayout>

</ScrollView>